[package]
name = "neo4j"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# actix
actix-web 			= "4.3.1"
actix-cors 			= "0.6.4"
actix-service 		= "2.0.2"
actix-session 		= { version = "0.7.2", features = ["redis-actor-session"] }
actix-redis 		= "0.12.0"

# db
neo4rs = "0.6.2"

# runtime
tokio = { version = "1.32.0", features = ["full"] }


# logger
env_logger 			= "0.8"

# others
anyhow = "1.0.75"
time 				= "0.3.20"
futures = "0.3.28"
serde 				= { version = "1.0.132", features = ["derive"] }
serde_json 			= "1.0.73"
derive_more = "0.99.17"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }